# SierraBreeze6

./: CMakeLists.txt  README.md  breeze.h  breeze.json  breezebutton.cpp  breezebutton.h  breezedecoration.cpp  breezedecoration.h  breezeexceptionlist.cpp  breezeexceptionlist.h  breezesettingsdata.kcfg  breezesettingsprovider.cpp  breezesettingsprovider.h  breezesizegrip.cpp  breezesizegrip.h  config-breeze.h.cmake
config/: CMakeLists.txt  breezeconfigwidget.cpp  breezeconfigwidget.h  breezedetectwidget.cpp  breezedetectwidget.h  breezeexceptiondialog.cpp  breezeexceptiondialog.h  breezeexceptionlistwidget.cpp  breezeexceptionlistwidget.h  breezeexceptionmodel.cpp  breezeexceptionmodel.h  breezeitemmodel.cpp  breezeitemmodel.h  breezelistmodel.h  kcm_sierrabreezedecoration.cpp  kcm_sierrabreezedecoration.json
